--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -133,7 +133,7 @@ font-weight: bold;
 font-size: 14px;
 line-height: 24px;
 margin-right: 5px;
-color: #565e6A;
+color: white;
 margin-bottom: 2px;
 }
 .contact-link {
@@ -141,7 +141,7 @@ font-style: normal;
 font-weight: normal; 
 font-size: 14px;
 line-height: 24px;
-color: #565e6A;
+color: white;
 margin-bottom: 2px;
 margin-top: 0px;
 }
